fix: pin deviceID to uuid
