# api/v1/registration_handler.go
@@ -5,9 +5,11 @@ import (
 	"net/http"
 
 	"github.com/google/uuid"
+	"github.com/labstack/echo/v4"
+
 	"github.com/jakob-moeller-cloud/octi-sync-server/api/v1/REST"
 	"github.com/jakob-moeller-cloud/octi-sync-server/middleware/basic"
-	"github.com/labstack/echo/v4"
+	"github.com/jakob-moeller-cloud/octi-sync-server/service"
 )
 
 func (api *API) Register(ctx echo.Context, params REST.RegisterParams) error {
@@ -17,15 +19,13 @@ func (api *API) Register(ctx echo.Context, params REST.RegisterParams) error {
 	}
 
 	deviceID := params.XDeviceID
-	if deviceID == "" {
-		deviceUUID, err := uuid.NewRandom()
+	if deviceID == uuid.Nil {
+		deviceID, err = uuid.NewRandom()
 		if err != nil {
 			return fmt.Errorf("generating a random device id for registration failed: %w", err)
 		}
 
-		deviceID = deviceUUID.String()
-
-		ctx.Response().Header().Set(basic.DeviceIDHeader, deviceID)
+		ctx.Response().Header().Set(basic.DeviceIDHeader, deviceID.String())
 	}
 
 	acc, password, err := api.Accounts.Register(ctx.Request().Context(), accountID.String())
@@ -33,7 +33,7 @@ func (api *API) Register(ctx echo.Context, params REST.RegisterParams) error {
 		return fmt.Errorf("account could not be registered: %w", err)
 	}
 
-	if _, err := api.Devices.Register(ctx.Request().Context(), acc, deviceID); err != nil {
+	if _, err := api.Devices.Register(ctx.Request().Context(), acc, service.DeviceID(deviceID)); err != nil {
 		return fmt.Errorf("device could not be registered under account: %w", err)
 	}
 
